--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.12.4",
-    "fb": "^0.7.0",
     "express": "^4.12.4",
-    "mongoose": "^3.9.7",
-    "url": "^0.10.3"
+    "fb": "^0.7.0",
+    "mongoose": "^3.9.7"
   },
   "devDependencies": {},
   "scripts": {
